# Engine-Comparison

./: .gitignore  COMPREHENSIVE_MULTI_TARGET_ANALYSIS_REPORT.md  MULTI_TARGET_README.md  Vehicle_Efficiency_Figures_Only.docx  Vehicle_Efficiency_Report_Compact.docx  enhanced_vehicle_efficiency_analysis.py  enhanced_vehicle_efficiency_analysis_REPORT.md  exp_script.py  main.py  pyproject.toml  readme.md  requirements.txt  run_multi_target.py  scaler_comparison_analysis.py  setup.py  vehicle_efficiency_analysis.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/: vehicle_comparison_dataset_030417.csv
exps/: experiment.ipynb  model_visualization.py
exps/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
exps/output/: best_model_linear_regression.joblib  model_comparison_results.csv  tuned_xgboost_metrics.json  tuned_xgboost_model.joblib
output/: best_enhanced_ev_model.joblib  best_enhanced_ice_model.joblib  best_ev_efficiency_model.joblib  best_ev_model_importances.csv  best_ice_efficiency_model.joblib  best_ice_model_coefficients.csv  best_ice_model_importances.csv  efficiency_analysis_report.txt  efficiency_analysis_results.json  enhanced_analysis_report.txt  enhanced_analysis_results.json  enhanced_ev_model_rankings.csv  enhanced_ice_model_rankings.csv  ev_dataset.csv  ev_model_parameters.json  ev_model_rankings.csv  ev_selected_features.json  final_modeling_report.md  ice_dataset.csv  ice_model_parameters.json  ice_model_rankings.csv  ice_selected_features.json  maintenance_cost_annual_baseline_results.csv  mileage_km_baseline_results.csv
output/efficiency/: best_enhanced_ev_model.joblib  best_enhanced_ice_model.joblib  enhanced_analysis_results.json  enhanced_ev_model_rankings.csv  enhanced_ice_model_rankings.csv  ev_model_parameters.json  ev_selected_features.json  final_modeling_report.md  ice_model_parameters.json
output/maintenance_cost/: best_enhanced_ev_model.joblib  best_enhanced_ice_model.joblib  enhanced_analysis_results.json  enhanced_ev_model_rankings.csv  enhanced_ice_model_rankings.csv  ev_model_parameters.json  final_modeling_report.md  ice_model_parameters.json  ice_selected_features.json
output/mileage/: ev_model_parameters.json  (+7 more)
reports/: FINAL_PAPER.md  TECHNICAL_REPORT.md  Vehicle_Efficiency_Explanatory_Narrative.docx  enhanced_vehicle_efficiency_analysis_REPORT-2.md  final_modeling_report.docx
scripts/: finetune_top.py  generate_report.py  generate_word_report.py  run_enhanced.py
ve/: __init__.py  data.py  features.py  logging_utils.py  models.py  pipeline.py  reporting.py  training.py  tuning.py  viz.py
(+40 files in other folders)
